examples/invalid/not_declared/chord_type2.vbr
moderato() {
    a: A <-> A(2, min)|
}